tests/fixtures/errors/variant_literal_in_node.gcl
// Error: variant literal of pub index used in a node expression
pub index Phase = { Design, Build, Test };
param cost: Dimensionless[Phase] = {
    Phase::Design: 100.0,
    Phase::Build: 200.0,
    Phase::Test: 50.0,
};
node design_cost: Dimensionless = @cost[Phase::Design];
